# Smart-Resume-Analysis-Powered-by-AI

./: README.md  cli_critic.py  main.py  pyproject.toml  requirements.txt
